@@ -1,1 +1,69 @@
-RESULT: . tmp
+/,,/
+//,/,/
+///,//,/
+///.,//,.
+//.,/,.
+.,.,.
+./,.,./
+.//,./,./
+.///,.//,./
+.////,.///,./
+./////,.////,./
+./////.,.////,.
+.////.,.///,.
+.///.,.//,.
+.//.,./,.
+.//./,./,./
+.//.//,./,./
+.//.//.,.//./,.
+.//./.,.//.,.
+./.,.,.
+././,.,./
+././/,.,./
+././/.,././,.
+././.,./.,.
+.//foo/bar,.//foo,bar
+.//foo/bar/,.//foo,bar/
+.//foo/bar//,.//foo,bar/
+.//foo/bar//.,.//foo/bar/,.
+.//foo/bar/.,.//foo/bar,.
+./foo/bar,./foo,bar
+./foo/bar/,./foo,bar/
+./foo/bar//,./foo,bar/
+./foo/bar//.,./foo/bar/,.
+./foo/bar/.,./foo/bar,.
+foo/bar,foo,bar
+foo/bar/,foo,bar/
+foo/bar//,foo,bar/
+foo/bar//.,foo/bar/,.
+foo/bar/.,foo/bar,.
+.//foo,./,foo
+.//foo/,./,foo/
+.//foo//,./,foo/
+.//foo//.,.//foo/,.
+.//foo/.,.//foo,.
+./foo,.,foo
+./foo/,.,foo/
+./foo//,.,foo/
+./foo//.,./foo/,.
+./foo/.,./foo,.
+foo,.,foo
+foo/,.,foo/
+foo//,.,foo/
+foo//.,foo/,.
+foo/.,foo,.
+.//foolink,./,foolink
+.//foolink/,./,foolink/
+.//foolink//,./,foolink/
+.//foolink//.,.//foolink/,.
+.//foolink/.,.//foolink,.
+./foolink,.,foolink
+./foolink/,.,foolink/
+./foolink//,.,foolink/
+./foolink//.,./foolink/,.
+./foolink/.,./foolink,.
+foolink,.,foolink
+foolink/,.,foolink/
+foolink//,.,foolink/
+foolink//.,foolink/,.
+foolink/.,foolink,.
